# atproto-oauth-crate

./: .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  justfile
.github/workflows/: docker.yml
examples/: askama.toml  basic_usage.rs  lexicon.rs  schema.rs  templates.rs
examples/codegen/: com.rs  record.rs  xyz.rs
examples/codegen/com/: crabdance.rs
examples/codegen/com/crabdance/: nandi.rs
examples/codegen/com/crabdance/nandi/: post.rs
examples/codegen/xyz/: blogosphere.rs
examples/codegen/xyz/blogosphere/: post.rs
examples/lexicons/: post.json
examples/templates/: base.html  blog_create.html  blog_delete.html  blog_edit.html  blog_list.html  blog_view.html  error.html  home.html  success.html  test.html
src/: db.rs  lib.rs  oauth.rs
