[package]
name = "atproto-oauth"
version = "0.1.0"
edition = "2021"
description = "Reusable OAuth components for AT Protocol applications"
license = "MIT"
repository = "https://github.com/your-username/atproto-oauth"
keywords = ["atproto", "oauth", "bluesky", "authentication"]
categories = ["authentication", "web-programming"]

[dependencies]
async-sqlite = "0.5.0"
async-trait = "0.1.88"
atrium-api = "0.25.0"
atrium-common = "0.1.1"
atrium-identity = "0.1.3"
atrium-oauth = "0.1.0"
chrono = "0.4.40"
hickory-resolver = "0.24.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.69"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
env_logger = "0.11.7"

[dev-dependencies]

[build-dependencies]

[features]
default = ["sqlite-storage"]
sqlite-storage = []